Fix search bar design on mobile

--- a/src/less/search.less
+++ b/src/less/search.less
@@ -35,7 +35,7 @@
 }
 
 @media (max-width: 600px) {
-    .book-search input {
+    #book-search-input input {
         width: 100%;
         min-width: 100%;
     }
